Fixed highlighting on the element you are hovering as well. Fixed the performance issue, but seems to be a small issue when using Chrome. Safari is preferred. Arrows gets removed after some time, for better visual design. Working on adding a box behind the animated text. Are having an issue with the text being in the wrong z-index order, should be the opposite.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,3 +45,7 @@
 .usedBlue {
 	background-color: #d9edf7;
 }
+.whiteBrick {
+	background-color: white;
+	height: 20px;
+}
